--- a/index.html
+++ b/index.html
@@ -32,8 +32,6 @@
           spellcheck="false"
         />
         <i class="fas fa-search"></i>
-        <!-- // what is this //  -->
-        <!-- <span class="material-icons">close</span> -->
         <span class="material-symbols-outlined"> close </span>
       </form>
       <p class="info-text">
@@ -49,26 +47,7 @@
           <i class="fas fa-volume-up"></i>
           <audio class="audio" src=""></audio>
         </li>
-        <div class="content">
-          <li class="meaning">
-            <div class="details">
-              <p>Meaning</p>
-              <span>___</span>
-            </div>
-          </li>
-          <li class="example">
-            <div class="details">
-              <p>Example</p>
-              <span>___</span>
-            </div>
-          </li>
-          <li class="synonyms">
-            <div class="details">
-              <p>Synonyms</p>
-              <div class="list"></div>
-            </div>
-          </li>
-        </div>
+        <div class="content"></div>
       </ul>
     </main>
 
